--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
   <div id="root"></div>
- <script type="module" src="app.js"></script>
+<script src="app.js" type="text/babel"></script>
 </body>
 </html>
